gcc/testsuite/gdc.test/runnable/imports/c22b.d
module imports.c22b;

public import imports.c22a : afn1;

void bfn1() {}
