gcc/testsuite/gdc.test/fail_compilation/imports/a18243.d
module imports.a18243;

import imports.b18243 : isNaN;

public bool isNaN() { return false; }
